--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -2,7 +2,7 @@
 
 	<div class="mw7 center pt3">
 
-		<div class="measure-narrow center mb4">
+		<!--<div class="measure-narrow center mb4">
 
 			<img src="/img/logo.svg" alt="Kaldi logo" class="db w4 center mb4 br0">
 			<p class="f3 lh-title light-gray b tc mb2">Newsletter subscribe</p>
@@ -15,14 +15,14 @@
 		<div class="flex-ns justify-between">
 
 			<div>
-				<h3 class="f4 b lh-title mb1 primary">Vimal Kumar</h3>
-				<!--<ul class="mb3">
+				<h3 class="f4 b lh-title mb1 primary">Kaldi</h3>
+				<ul class="mb3">
 					<li><a href="/" class="link">Home</a></li>
 					<li><a href="/products" class="link">Our products</a></li>
 					<li><a href="/values" class="link">About</a></li>
 					<li><a href="/post" class="link">Blog</a></li>
 					<li><a href="/contact" class="link">Contact</a></li>
-				</ul>-->
+				</ul>
 			</div>
 
 			<div>
@@ -43,7 +43,7 @@
 				</ul>
 			</div>
 
-		</div>
+		</div>-->
 	</div>
 
 </footer>
